--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, Welcome to Rivey Hill!</div>
+		<div class="intro">Hello, Welcome from Rivey Hill!</div>
 		<div class="tagline">Writing and Book Publishing | Contact:  info @ riveyhill. com</div>
 	</main>
 </body>
